# TCC---Polis

./: .gitignore  pyproject.toml  requirements.txt  ws_test.html
backend/: main.py
backend/app/: main.py
backend/app/api/: README  deps.py
backend/app/core/: README  config.py  security.py
backend/app/db/: README  database.py  redis.py
backend/app/factories/: README
backend/app/models/: README  __init__.py  action.py  action_option.py  match.py  match_mission.py  match_territory.py  party.py  player.py  room.py  state.py  territory.py  user.py
backend/app/repositories/: action_option_repo.py  game_repo.py  match_mission_repo.py  match_repo.py  mission_repo.py  player_repo.py  question_repo.py  room_repo.py  session_repo.py  territory_repo.py
backend/app/rules/: README  action_rule.py
backend/app/schemas/: README  auth.py  game.py  match_mission.py  player.py  room.py  websocket.py
backend/app/scripts/: convert_svg_to_jsx.py  create_db.py  create_demo_match.py  seed_missions.py  seed_parties.py  seed_territories.py  show_territories.py  test_create_match.py  test_get_match_state.py  test_redis.py
backend/app/services/: README  action_service.py  game_service.py  match_mission_service.py  match_service.py  player_service.py  room_service.py  session_service.py
backend/app/utils/: README  exceptions.py  ids.py
frontend/legacy/: script.js
frontend/src/: App.jsx  MatchMapTest.jsx
frontend_koga/: index.html  package.json
frontend_koga/src/: App.jsx  main.jsx
static/: index.html  script.js
templates/: index_backend.html
(+79 files in other folders)
