[project]
name = "tcc-polis"
version = "0.1.0"
description = ""
authors = [
    {name = "Dagasfoka",email = "gmelo.loredo@gmail.com"}
]
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "websockets (>=16.0,<17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "typos (>=1.44.0,<2.0.0)"
]
[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]
preview = true

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = "python -m uvicorn backend.main:app --reload"

pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

check = "ruff check ."
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."